--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -53,7 +53,7 @@ ul {
     width: 900px;
 }
 .header {
-    margin-bottom: 3em;
+    margin-bottom: 3rem;
     border-bottom: 2px solid;
 }
 h1 {
@@ -132,8 +132,8 @@ h3 {
     overflow: hidden;
 }
 .featured:not(:last-child) {
-    padding-bottom: 5em;
-    margin-bottom: 3em;
+    padding-bottom: 5rem;
+    margin-bottom: 3rem;
     border-bottom: 2px solid var(--color-accent);
 }
 .featured-one {
